
CHANGES
==============


1.3.1874 (unreleased)
---------------------

- remake some love to django template


1.3.1873 (2012-06-11)
---------------------
- fix changelog

1.3.1872 (2012-06-11)
---------------------
- fix mysql template
- maintain & add products to plone templates
  

1.3.1871 (2012-02-02)
---------------------

- upgrade plone products to current : 30/01/2012
- add plone42 template
- unactivate blob maintenance and use collective.recipe.backup flavor.
- Update the plone template to current best practise


1.3.1859 (2011-11-22)
---------------------

- documentation


1.3.1858 (2011-11-22)
---------------------

- fix upload


1.3.1857 (2011-11-22)
---------------------

- in plone template

        - better ignore files
        - rewrite chown files
        - Add more than one instance in dev mode
        - Add zope undo to zeoserver
        - Add more queues in balancer template
        - upgrade dexterity to 1.0
        - upgrade plone41 to 4.1rc1
        - upgrade plone40 to 4.0.7
        - add Products:

            - collective.contentrules.mailtolocalrole
            - collective.googleanalytics
            - collective.portlet.relateditems
            - collective.quickupload
            - plone.contentratings
            - Products.EasyNewsletter
            - Products.ReDirectionTool
            - qi.portlet.tagclouds
            - quintagroup cumulus portlet
            - quintagroup.plonecaptchas
            - solgema.fullcalendar

- add pyramid template

1.3.1855 (2011-04-01)
---------------------

- handle dyldlibrarypath on darwin


1.3.1854 (2011-04-01)
---------------------

    - blobstorage improvments
    - upgrade plone4 versions (zope 212/plone4 KGS)
    - store now blobstorage and fss in resp. var/blobstorage/ & var/fss
    - support cynin
    - fix plomino versions
    - up bootstrap
    - Rework the django template
    - add PKGCONFIGPATH handle to instances.env