@@ -6,6 +6,7 @@
 <root>
   <template>
     <options>
+      <option order="01007" name="with_ploneproduct_datatables"   description="collective.js.datatables, see http://pypi.python.org/pypi/collective.js.datatables y/n" default="n"/>
       <option order="0000" name="with_tool_bpython"            description="bpython, see http://www.bpython-interpreter.org/ y/n" default="y"/>
       <option order="0000" name="with_ploneproduct_dexterity"  description="Dexterity, see http://plone.org/products/dexterity y/n" default="n"/>
       <option order="0000" name="with_ploneproduct_paasync"  description="Plone.app.async, see http://pypi.python.org/pypi/plone.app.async/ y/n" default="n"/>
@@ -28,6 +29,8 @@
       <option order="01007" name="with_ploneproduct_eeafn"     description="eea.facetednaviguation, see http://pypi.python.org/pypi/eea.facetednavigation y/n" default="n"/>
       <option order="01007" name="with_ploneproduct_addthis"     description="collective.addthis, see http://pypi.python.org/pypi/collective.addthis y/n" default="n"/>
       <option order="01007" name="with_ploneproduct_oembed"     description="collective.oembed, see http://pypi.python.org/pypi/collective.oembed y/n" default="n"/>
+      <option order="01007" name="with_ploneproduct_cpembed"     description="collective.portlet.embed, see http://pypi.python.org/pypi/collective.portlet.embed y/n" default="n"/>
+      <option order="01007" name="with_ploneproduct_eslider"     description="collective.easyslider, see http://pypi.python.org/pypi/collective.easyslider y/n" default="n"/>
       <option order="01007" name="with_ploneproduct_seo"        description="collective.seo, see http://pypi.python.org/pypi/collective.seo y/n" default="n"/>
       <option order="01007" name="with_ploneproduct_galleria"   description="collective.galleria, see http://pypi.python.org/pypi/collective.galleria y/n" default="n"/>
       <option order="01007" name="with_ploneproduct_masonry"   description="collective.masonry, see http://pypi.python.org/pypi/collective.masonry y/n" default="n"/>
@@ -58,6 +61,7 @@
       <version p="plone.registry"          v="1.0"     name="plone.app.registry on plone4"/>
     </versions>
     <checkedversions>
+      <version p='collective.js.datatables'    v='1.9.2.3'   options='with_ploneproduct_datatables' />
       <version p='collective.js.chosen'          v='1.1'  options="with_ploneproduct_jschosen"/>
       <version p='collective.configviews'          v='2.0'  options="with_ploneproduct_configviews"/>
       <version p='collective.registry'          v='1.0'  options="with_ploneproduct_configviews"/>
@@ -65,6 +69,7 @@
       <version p='collective.galleria'          v='1.1'  options="with_ploneproduct_masonry"/>
       <version p='collective.masonry'          v='1.2'  options="with_ploneproduct_masonry"/>
       <version p='collective.oembed'           v='1.2.1'  options="with_ploneproduct_oembed"/>
+      <version p='collective.portlet.embed'           v='1.0'  options="with_ploneproduct_cembed"/>
       <version p='python-oembed'           v='0.2.1'  options="with_ploneproduct_oembed"/>
       <version p='collective.portlet.oembed'   v='1.0'  options="with_ploneproduct_oembed"/>
       <version p='collective.addthis'         v='1.3.1'  options="with_ploneproduct_addthis"/>
@@ -79,7 +84,8 @@
       <version p='plone.formwidget.captcha'                v='1.0.1'    options="with_ploneproduct_captcha"/>
       <version p='ordereddict'                             v='1.1'      options="with_tool_i18ndude"/>
       <version p='Products.Poi'                            v='2.0.1'    options="with_ploneproduct_poi"/>
-      <version p='collective.js.jqueryui'                  v='1.8.16.6' options='with_ploneproduct_cjqui,with_ploneproduct_sfcalendar' />
+      <version p='collective.js.jqueryui'                  v='1.8.16.8' options='with_ploneproduct_cjqui,with_ploneproduct_sfcalendar' />
+      <version p='collective.easyslider'                  v='1.0' options='with_ploneproduct_eslider' />
       <version p='Products.ContentWellPortlets'            v='4.1.0'    options="with_ploneproduct_contentwellportlet"/>
       <version p='Products.CMFBibliographyAT'              v='1.1.2'    options="with_ploneproduct_cmfbibliographyat"/>
       <version p='Products.ATExtensions' v='1.1a3'         options="with_ploneproduct_cmfbibliographyat"/>
@@ -213,8 +219,11 @@
       <egg name="collective.addthis"    options="with_ploneproduct_addthis"       zcml="configure"/>
       <egg name="collective.galleria"   options="with_ploneproduct_galleria"      zcml="configure"/>
       <egg name="collective.seo"        options="with_ploneproduct_seo"           zcml="configure"/>
-      <egg name="collective.oembed"     options="with_ploneproduct_addthis"       zcml="configure"/>
+      <egg name="collective.oembed"          options="with_ploneproduct_oembed"   zcml="configure"/>
       <egg name="collective.portlet.oembed"  options="with_ploneproduct_oembed"   zcml="configure"/>
+      <egg name="collective.portlet.embed"     options="with_ploneproduct_cpembed"       zcml="configure"/>
+      <egg name="collective.easyslider"     options="with_ploneproduct_eslider"       zcml="configure"/>
+      <egg name="collective.js.datatables"          options="with_ploneproduct_datatables"   zcml="configure"/>
       <egg name="collective.masonry"    options="with_ploneproduct_masonry"       zcml="configure"/>
       <egg name="Products.CMFBibliographyAT"  options="with_ploneproduct_cmfbibliographyat"          zcml="configure"/>
       <egg name="collective.portlet.relateditems"  options="with_ploneproduct_crelateditems"          zcml="configure"/>
@@ -234,12 +243,14 @@
       <product name="medialog.subskins"            options="with_ploneproduct_subskins"   order="900" />
     </qi>
     <gs>
+      <product name='collective.easyslider'   options="with_ploneproduct_eslider" order="900"/>
       <product name='collective.js.chosen'   options="with_ploneproduct_jschosen" order="900"/>
       <product name='collective.configviews'   options="with_ploneproduct_configviews" order="900"/>
       <product name='collective.galleria'   options="with_ploneproduct_galleria" order="900"/>
       <product name='collective.seo'   options="with_ploneproduct_seo" order="900"/>
-      <product name='collective.oembed'   options="with_ploneproduct_oembed" order="900"/>
-      <product name='collective.portlet.oembed'   options="with_ploneproduct_oembed" order="900"/>
+      <product name='collective.oembed'          options="with_ploneproduct_oembed" order="900"/>
+      <product name='collective.portlet.oembed'  options="with_ploneproduct_oembed" order="900"/>
+      <product name='collective.portlet.embed'   options="with_ploneproduct_cpembed" order="900"/>
       <product name='collective.masonry'   options="with_ploneproduct_masonry" order="900"/>
       <product name='collective.addthis'   options="with_ploneproduct_addthis" order="900"/>
       <product name='eea.facetednavigation'   options="with_ploneproduct_eeafn" order="900"/>
@@ -249,6 +260,7 @@
       <product name='plone.formwidget.captcha'   options="with_ploneproduct_captcha" order="900"/>
       <product name="collective.portlet.localcumulus"  options="with_ploneproduct_clcumulus"     order="900" />
       <product name="Products.RedirectionTool"        options="with_ploneproduct_rtool"     order="900" />
+      <product name="collective.js.datatables"             options="with_ploneproduct_datatables" order="1"/>
       <product name="Products.EasyNewsletter"         options="with_ploneproduct_enewsletter"     order="900" />
       <product name="collective.quickupload"          options="with_ploneproduct_qupload"         order="900" />
       <product name="quintagroup.plone.captcha"      options="with_ploneproduct_qcaptcha"       order="900" />
@@ -268,6 +280,8 @@
     </gs>
     <sources>
       <source name='Products.CMFBibliographyAT'  type="svn" url="http://svn.plone.org/svn/collective/Products.CMFBibliographyAT/trunk/" options="with_ploneproduct_cmfbibliographyat" order="900" autocheckout="y"/>
+      <source name='collective.js.datatables'  type="git" url="https://github.com/collective/collective.js.datatables.git" options="with_ploneproduct_eslider" order="900"/>
+      <source name='collective.easyslider'  type="git" url="https://github.com/collective/collective.easyslider.git" options="with_ploneproduct_eslider" order="900"/>
       <source name='plone.formwidget.recaptcha'  type="git" url="https://github.com/plone/plone.formwidget.captcha.git" options="with_ploneproduct_captcha" order="900"/>
       <source name='plone.formwidget.captcha'    type="git" url="https://github.com/plone/plone.formwidget.recaptcha.git" options="with_ploneproduct_captcha" order="900"/>
       <source name='collective.recaptcha'  type="svn" url="http://svn.plone.org/svn/collective/collective.recaptcha/trunk/" options="with_ploneproduct_captcha" order="900"/>
@@ -293,7 +307,8 @@
 
       <source name="collective.masonry"      type="git"        url="https://github.com/collective/collective.masonry" options="with_ploneproduct_masonry"  />
       <source name="collective.oembed"      type="git"         url="https://github.com/collective/collective.oembed" options="with_ploneproduct_oembed"  />
-      <source name="collective.portlet.oembed"      type="git" url="https://github.com/collective/collective.portlet.oembed" options="with_ploneproduct_oembed"  />
+      <source name="collective.portlet.embed"      type="git"         url="https://github.com/collective/collective.portlet.embed" options="with_ploneproduct_portlet.embed"  />
+      <source name="collective.portlet.oembed"      type="git" url="https://github.com/collective/collective.portlet.oembed" options="with_ploneproduct_cpembed"  />
       <source name="collective.addthis"      type="git"        url="https://github.com/collective/collective.addthis" options="with_ploneproduct_addthis"  />
       <source name="collective.galleria"      type="git"        url="https://github.com/collective/collective.galleria" options="with_ploneproduct_galleria"  />
       <source name="collective.seo"      type="git"        url="https://github.com/collective/collective.seo" options="with_ploneproduct_seo"  />
