@@ -81,9 +81,9 @@ for name in sources_k:
     )
 
 class Template(plone41.Template):
-    packaged_version = '4.2b1'
-    packaged_zope2_version = '2.13.10'
-    packaged_ztk_version = '1.0.6'
+    packaged_version = '4.2'
+    #packaged_zope2_version = '2.13.10'
+    #packaged_ztk_version = '1.0.6'
     summary         = 'Template for creating a plone42 project'
     python          = 'python-2.7'
 
